[gd_scene load_steps=16 format=2]

[ext_resource path="res://escena/columnas.tscn" type="PackedScene" id=1]
[ext_resource path="res://escena/pajaro.tscn" type="PackedScene" id=2]
[ext_resource path="res://escena/suelos.tscn" type="PackedScene" id=4]
[ext_resource path="res://codigos/Escena_principañ.gd" type="Script" id=6]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://texturas/butoon.png" type="Texture" id=10]
[ext_resource path="res://texturas/butoon_hover.png" type="Texture" id=11]
[ext_resource path="res://musica/AngryLlama-NewFangled.ogg" type="AudioStream" id=14]
[ext_resource path="res://musica/item.ogg" type="AudioStream" id=15]
[ext_resource path="res://musica/morir.ogg" type="AudioStream" id=16]
[ext_resource path="res://musica/selectMenu.ogg" type="AudioStream" id=17]

[sub_resource type="ProceduralSky" id=1]
texture_size = 0

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
background_color = Color( 0.298039, 0.784314, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/CenterContainer/ButtonReiniciar:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[node name="Escena_principañ" type="Spatial" groups=[
"Escena_principañ",
]]
script = ExtResource( 6 )
dificultad = 0.1

[node name="PivoteCamara" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )

[node name="Camera" type="Camera" parent="PivoteCamara"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 11, -2, 0 )
current = true

[node name="Camera2" type="Camera" parent="PivoteCamara"]
transform = Transform( 0.00964348, -0.0182877, 0.999786, 0, 0.999833, 0.0182886, -0.999954, -0.000176366, 0.00964187, 19.1522, -2.27772, -14.0361 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.709509, 0, 0.704696, 0.704696, 0, 0.709509, 0, 1, 0, 0, 8, -40 )
light_energy = 5.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="suelos" parent="." instance=ExtResource( 4 )]

[node name="fps" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "FPS = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.10803
margin_right = 1.10803
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_right = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReiniciar" type="TextureButton" parent="Control/CenterContainer" groups=[
"ButtonReiniciar",
]]
visible = false
margin_top = 242.0
margin_right = 208.0
margin_bottom = 358.0
rect_pivot_offset = Vector2( 104, 58 )
disabled = true
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/agrandarButton = SubResource( 4 )

[node name="TimerDificultad" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="TestJavascript" type="Spatial" parent="."]

[node name="MusicAndVfx" type="Node" parent="."]

[node name="musicAUDIO" type="AudioStreamPlayer" parent="MusicAndVfx" groups=[
"musicAUDIO",
]]
stream = ExtResource( 14 )
autoplay = true

[node name="itemSound" type="AudioStreamPlayer" parent="MusicAndVfx" groups=[
"itemSound",
]]
stream = ExtResource( 15 )

[node name="MorirSound" type="AudioStreamPlayer" parent="MusicAndVfx" groups=[
"MorirSound",
]]
stream = ExtResource( 16 )

[node name="selectMenuSound" type="AudioStreamPlayer" parent="MusicAndVfx" groups=[
"selectMenuSound",
]]
stream = ExtResource( 17 )

[node name="pajaro" parent="." instance=ExtResource( 2 )]

[node name="columnas" parent="." instance=ExtResource( 1 )]
[connection signal="button_down" from="Control/CenterContainer/ButtonReiniciar" to="." method="_on_ButtonReiniciar_button_down"]
[connection signal="mouse_entered" from="Control/CenterContainer/ButtonReiniciar" to="." method="_on_ButtonReiniciar_mouse_entered"]
[connection signal="mouse_exited" from="Control/CenterContainer/ButtonReiniciar" to="." method="_on_ButtonReiniciar_mouse_exited"]
[connection signal="timeout" from="TimerDificultad" to="." method="_on_TimerDificultad_timeout"]
